--- a/scss/layout/_responsive.scss
+++ b/scss/layout/_responsive.scss
@@ -66,6 +66,7 @@
 		padding:50px 0;
 	}
 	#hero_customer {
+		background:url('../i/content/hero3.jpg') no-repeat center center;
 		.title_customer {
 			position:absolute;
 			top:50%;
